MatrixAuth: Add server verification inside constructor.